--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -28,3 +28,12 @@
     opacity: 1;
   }
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
